feat: added working SAM template and openapi spec + models
