# Backend/src/ragdemon/lambda/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.1.0
 info:
   title: Multi-endpoint RAG API
   version: 1.0.0
@@ -12,6 +12,13 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/QuestionRequest"
+
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/${BedrockRagFunction.Arn}/invocations"
+        httpMethod: POST
+        type: aws_proxy
+
       responses:
         "200":
           description: Successful response
@@ -24,19 +31,28 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                type: object
+                properties:
+                  message:
+                    type: string
         "403":
           description: Forbidden
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                type: object
+                properties:
+                  message:
+                    type: string
         "500":
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                type: object
+                properties:
+                  message:
+                    type: string
 
 components:
   schemas:
@@ -49,8 +65,8 @@ components:
         session_id:
           description: Optional session identifier
           type: string
-      required:
-        - query
+      required: [query]
+
     AnswerResponse:
       type: object
       properties:
@@ -78,7 +94,7 @@ components:
           description: The chunks retrieved from the vector store to generate the response part
           items:
             $ref: "#/components/schemas/Chunk"
-      required: [content, references]
+      required: [text, references]
 
     Chunk:
       type: object
@@ -89,14 +105,3 @@ components:
         url:
           type: string
           format: uri
-          description: The URL that the chunk was originally pulled from
-      required: [content, url]
-
-    ErrorResponse:
-      type: object
-      properties:
-        message:
-          type: string
-        code:
-          type: integer
-      required: [message, code]
