# Backend/src/ragdemon/lambda/ragdemon/model.py
@@ -1,10 +1,10 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-07-31T08:49:33+00:00
+#   timestamp: 2025-08-04T05:31:28+00:00
 
 from __future__ import annotations
 
-from typing import List, Optional
+from typing import Any, Dict, List, Optional
 
 from pydantic import AnyUrl, BaseModel, Field
 
@@ -16,6 +16,13 @@ class QuestionRequest(BaseModel):
     session_id: Optional[str] = Field(None, description='Optional session identifier')
 
 
+class ApiGatewayResponse(BaseModel):
+    statusCode: Optional[int] = None
+    headers: Optional[Dict[str, Any]] = None
+    body: Optional[str] = None
+    isBase64Encoded: Optional[bool] = None
+
+
 class Chunk(BaseModel):
     text: Optional[str] = Field(None, description='The text content of the chunks')
     url: AnyUrl = Field(
@@ -23,9 +30,8 @@ class Chunk(BaseModel):
     )
 
 
-class ErrorResponse(BaseModel):
+class ErrorResponseBody(BaseModel):
     message: str
-    code: int
 
 
 class ResponsePart(BaseModel):
@@ -38,7 +44,7 @@ class ResponsePart(BaseModel):
     )
 
 
-class AnswerResponse(BaseModel):
+class AnswerResponseBody(BaseModel):
     answer: str = Field(
         ..., description='The generated LLM response based on the retrieved chunks'
     )
@@ -51,7 +57,7 @@ class AnswerResponse(BaseModel):
     )
 
     @staticmethod
-    def from_retrieve_and_generate_response(data: RetrieveAndGenerateResponseTypeDef) -> AnswerResponse:
+    def from_retrieve_and_generate_response(data: RetrieveAndGenerateResponseTypeDef) -> AnswerResponseBody:
         output = data["output"]["text"]
         session_id = data["sessionId"]
         citations = data["citations"]
@@ -78,8 +84,10 @@ class AnswerResponse(BaseModel):
                 "references": simplified_refs
             })
 
-        return AnswerResponse(
+        return AnswerResponseBody(
             answer = output,
             responseParts = extracted_parts,
             session_id = session_id
         )
+
+
